--- a/thermalsam-lite/requirements.txt
+++ b/thermalsam-lite/requirements.txt
@@ -9,10 +9,16 @@ pillow>=10.0.0
 segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
 timm>=0.9.0
 
+# SAM 3D / Depth estimation
+torchmetrics>=1.0.0
+
 # Visualization
 matplotlib>=3.7.0
 seaborn>=0.12.0
 plotly>=5.15.0
+
+# 3D visualization
+open3d>=0.17.0  # Optional - for advanced 3D viz
 
 # Utilities
 tqdm>=4.65.0
